--- a/GoOSWINAPPS/GoOS Studio/GoOS Studio/GoOS Studio.vbproj
+++ b/GoOSWINAPPS/GoOS Studio/GoOS Studio/GoOS Studio.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>GoOS_Studio</RootNamespace>
     <StartupObject>Sub Main</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
